--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Example",
-  "namelower": "example",
+  "name": "BlankAngularProject",
+  "namelower": "blankangularproject",
   "version": "0.0.1",
-  "description": "An example AngularJS project",
+  "description": "Blank AngularJS+Bootstrap project",
   "readme": "README.md",
   "repository": {
     "type": "git",
@@ -10,19 +10,20 @@
   },  
   "devDependencies": {
     "grunt": "0.4.2",
-    "grunt-contrib-concat":     "0.3.0",
-    "grunt-contrib-copy":       "0.5.0",
-    "grunt-contrib-jshint":     "0.8.0",
-    "grunt-contrib-nodeunit":   "0.3.0",
-    "grunt-contrib-uglify":     "0.2.2",
-    "grunt-contrib-watch":      "0.5.3",
+    "grunt-contrib-concat":     "latest",
+    "grunt-contrib-copy":       "latest",
+    "grunt-contrib-jshint":     "latest",
+    "grunt-contrib-nodeunit":   "latest",
+    "grunt-contrib-uglify":     "latest",
+    "grunt-contrib-less":       "latest",
+    "grunt-contrib-cssmin":     "latest",
+    "grunt-contrib-watch":      "latest",
     "grunt-jsdoc":              "0.5.4",
     "grunt-exec":               "0.4.5",
     "grunt-karma":              "0.8.3",
     "karma":                    "0.12.16",
     "karma-jasmine":            "0.1.5",
     "karma-phantomjs-launcher": "0.1.4",
-
   },  
   "scripts": {
     "postinstall": "bower install"
